objects/Module_Aim__c.object
<CustomObject><fields>
        <fullName>Module_Version__c</fullName>
        <label>Module Version</label>
        <referenceTo>Module_Version__c</referenceTo>
        <relationshipLabel>Module Aims</relationshipLabel>
        <relationshipName>Module_Aims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields><fields>
        <fullName>Record_No__c</fullName>
        <description>Set by Workflow</description>
        <inlineHelpText>Leave blank on record creation if automatic numbering is required (set by Workflow)</inlineHelpText>
        <label>No.</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Specific_Aim__c</fullName>
        <label>Specific Aim</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Module Aim</label><nameField>
        <displayFormat>MA-{000000}</displayFormat>
        <label>Module Aim Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Module Aims</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>